--- a/projeto/projeto/Site.Master
+++ b/projeto/projeto/Site.Master
@@ -83,9 +83,11 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
-            <footer>
+            <CENTER>
+                <footer>
                 <p>&copy; <%: DateTime.Now.Year %> - Jovem Saudável</p>
             </footer>
+            </CENTER>
         </div>
 
     </form>
