inicio acesso medico

--- a/projeto/projeto/css/estilo0982.css
+++ b/projeto/projeto/css/estilo0982.css
@@ -980,11 +980,11 @@
 }
 
 .teal {
-    background-color: #00A8C5 !important
+    background-color: #009688 !important
 }
 
 .teal-text {
-    color: #00A8C5 !important
+    color: #009688 !important
 }
 
 .teal.lighten-5 {
@@ -5074,7 +5074,7 @@ small {
 }
 
     .btn:hover, .btn-large:hover {
-        background-color: #00A8C5
+        background-color: #2bbbad
     }
 
 .btn-floating {
@@ -5881,9 +5881,7 @@ input:not([type]), input[type=text], input[type=password], input[type=email], in
 
 .input-field {
     position: relative;
-    margin-top: 1rem;
-    top: 21px;
-    left: -9px;
+    margin-top: 1rem
 }
 
     .input-field.inline {
@@ -5897,9 +5895,8 @@ input:not([type]), input[type=text], input[type=password], input[type=email], in
         }
 
     .input-field.col label {
-        left: -2147483648px;
-    width: 413px;
-}
+        left: .75rem
+    }
 
     .input-field.col .prefix ~ label, .input-field.col .prefix ~ .validate ~ label {
         width: calc(100% - 3rem - 1.5rem)
@@ -5908,13 +5905,13 @@ input:not([type]), input[type=text], input[type=password], input[type=email], in
     .input-field label {
         color: #9e9e9e;
         position: absolute;
-        top: -2147483648px;
+        top: 0.8rem;
         left: 0;
         font-size: 1rem;
         cursor: text;
         transition: .2s ease-out;
         text-align: initial
-}
+    }
 
         .input-field label:not(.label-icon).active {
             font-size: .8rem;
@@ -6130,7 +6127,7 @@ textarea {
 
 form p {
     margin-bottom: 10px;
-    text-align: left
+    text-align: left;
 }
 
     form p:last-child {
@@ -6797,7 +6794,7 @@ input[type=range] {
             }
 
             .side-nav li > a.btn:hover, .side-nav li > a.btn-large:hover, .side-nav li > a.btn-large:hover {
-                background-color: #00A8C5
+                background-color: #2bbbad
             }
 
             .side-nav li > a.btn-floating:hover {
